@@ -25,7 +25,8 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 
 This release also includes changes from <<release-3-4-3, 3.4.3>>.
 
-* Allowed the possibility for the user of `null` in Gremlin.
+* Allowed the possibility for the propagation of `null` as a `Traverser` in Gremlin.
+* Ensured better consistency of the use of `null` as arguments to mutation steps.
 * Added a `Graph.Feature` for `supportsNullPropertyValues`.
 * Refactored `MapStep` to move its logic to `ScalarMapStep` so that the old behavior could be preserved while allow other implementations to have more flexibility.
 * Modified TinkerGraph to support `null` property values and can be configured to disable that feature.
